--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url("/img/solid-navy-blue-concrete-textured-wall.jpg");
+      background-image: url("./img/solid-navy-blue-concrete-textured-wall.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment:fixed;
@@ -153,7 +153,7 @@
   <section id="about">
     <h2>About Me</h2>
   
-    <img src="/img/sarthak-photo-v1.jpg" alt="My photo" class="profile-pic">
+    <img src="./img/sarthak-photo-v1.jpg" alt="My photo" class="profile-pic">
     
     <p>Hello there! I'm a first-year Computer Science student at DTU. I love exploring tech, learning new things, and sharing my thoughts online.</p>
   </section>
